apps/truecommand/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: truecommand
spec:
  selector:
    matchLabels:
      app: truecommand
  serviceName: truecommand
  template:
    metadata:
      labels:
        app: truecommand
    spec:
      containers:
        - image: docker.io/ixsystems/truecommand:2.2.1
          name: truecommand
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 250m
              memory: 1024Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
