apps/truecommand/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: truecommand
spec:
  ports:
    - port: 80
  selector:
    app: truecommand
