apps/truecommand/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truecommand
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - truenas.hubbe.club
  rules:
    - host: truenas.hubbe.club
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truecommand
                port:
                  number: 80
